# hex

./: .gitignore  CMakeLists.txt  README.md  meson.build
docs/: hex.1.md  meson.build  rituals.md
examples/: examples.lua
examples/cmake-hello/: CMakeLists.txt  cmake-hello.c
examples/gnu-hello/: Makefile.am  configure.ac
examples/unix-hello/: Makefile.in  configure
include/: meson.build
include/hex/: lua.h
man/1/: hex.1
src/hex/: hex.lua  main.c  meson.build
src/hex/rituals/: build.lua  install.lua
src/hex/rituals/cmake/: build.lua  install.lua
src/libhex/: env.lua  hex.lua  log.lua  lua_env.c  lua_fs.c  lua_hash.c  lua_hex.c  lua_log.c  lua_report_log.c  lua_report_none.c  meson.build
src/libhex/rituals/: build.lua  configure.lua  install.lua
src/libhex/rituals/cmake/: build.lua  configure.lua  install.lua
src/libhex/rituals/gnu/: configure.lua
src/libhex/rituals/kbuild/: build.lua  configure.lua  install.lua
src/libhex/rituals/unix/: build.lua  configure.lua  install.lua
tools/bin2src/: main.c  meson.build
